# alpaca-dslr

./: .gitignore  Cargo.toml  README.md  build.rs  conform.settings.json  run-conformu.sh
generator/: AlpacaDeviceAPI_v1.rs  AlpacaDeviceAPI_v1.yaml  common.rs  extra-schemas.ts  index.mjs  index.ts  mod.rs  package.json  parse-elendil.ts  pnpm-lock.yaml  server.ejs  tsconfig.json  xml-names.ts
src/: bulb_control.rs  cached_radio_widget.rs  convert_image.rs  lib.rs  main.rs  parse_image.rs
