[package]
name = "alpaca-dslr"
version = "0.1.0"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]

[dependencies]
ascom-alpaca = { version = "1.0.0-beta.1", features = ["camera", "server"] }
async-trait = "0.1.68"
atomic = "0.5.3"
eyre = "0.6.8"
gphoto2 = { version = "3.2.1", features = ["test", "extended_logs"] }
image = "0.24.6"
ndarray = "0.15.6"
time = { version = "0.3.22", features = ["formatting"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
