[package]
name = "alpaca-dslr"
version = "0.1.0"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]

[dependencies]
ascom-alpaca = { version = "1.0.0-beta.1", features = ["camera", "server"] }
async-trait = "0.1.68"
atomic = "0.5.3"
color-eyre = "0.6.2"
custom_debug = "0.5.1"
eyre = "0.6.8"
futures-util = "0.3.28"
gphoto2 = { version = "3.2.1", features = ["extended_logs"] }
image = "0.24.6"
kamadak-exif = "0.5.5"
ndarray = "0.15.6"
parking_lot = "0.12.1"
time = { version = "0.3.22", features = ["formatting"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rawler = { git = "https://github.com/dnglab/dnglab", rev = "2577ee1e87d767e16e4be8816bf61f35f5b7af88" }
bytes = "1.4.0"
